# kopi_challenge

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  vercel.json
.devcontainer/: devcontainer.json  docker-compose.yml
src/: application.ini.example  main.py  settings.py
src/config/: config.py
src/kopi/application/: debate_controller.py  entities.py
src/kopi/domain/: debates_service.py  entities.py
src/kopi/infrastructure/: ai_repository.py  ai_repository_factory.py  entities.py  json_messages_repository.py  messages_repository.py  messages_repository_factory.py  supabase_messages_repository.py
supabase/: config.toml
supabase/migrations/: 20250912085149_add_messages_table.sql
tests/: conftest.py
tests/application/: test_debate_endpoint.py  test_health_endpoint.py
tests/domain/: test_debate_service.py
tests/infrastructure/: test_supabase_messages_repository.py
